@@ -20,7 +20,6 @@ package org.apache.jena.atlas.lib;
 
 import static java.lang.String.format;
 import static java.util.Arrays.stream ;
-import static java.util.stream.Collectors.toList;
 
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -138,6 +137,15 @@ public class StrUtils //extends StringUtils
         return x.isEmpty() ? x : x.substring(0, x.length() - 1) ;
     }
 
+    /**
+     * Return the last character of a string,
+     * return char zero if the string is zero
+     * length.
+     */
+    public static char lastChar(String x) {
+        return x.isEmpty() ? 0 : x.charAt(x.length()-1);
+    }
+
     public static String noNewlineEnding(String x) {
         while (x.endsWith("\n") || x.endsWith("\r"))
             x = StrUtils.chop(x) ;
@@ -145,7 +153,7 @@ public class StrUtils //extends StringUtils
     }
 
     public static List<Character> toCharList(String str) {
-        return str.codePoints().mapToObj(i -> (char) i).map(Character::valueOf).collect(toList());
+        return str.codePoints().mapToObj(i -> (char) i).map(Character::valueOf).toList();
     }
 
     // ==== Encoding and decoding strings based on a marker character (e.g. %)
